Amélioration CSS header & navbar

--- a/src/Header.css
+++ b/src/Header.css
@@ -3,10 +3,11 @@
     display: flex;
     margin: 30px 0 50px 0;
     background-color: #c81517;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .header__logo {
-    align-self: center;
     height: 150%;
     margin-left: 50px;
 }
@@ -28,6 +29,10 @@
     .header__logo {
         height: 200%;
         margin-left: 75px;
+    }
+
+    .header__navbar {
+        margin-right: 50px;
     }
 }
 
