--- a/src/Form.css
+++ b/src/Form.css
@@ -45,6 +45,8 @@
     font-family: Montserrat, Arial, Helvetica, sans-serif;
     font-size: 0.6rem;
     text-align: center;
+    margin: 5px auto;
+    width: 75%;
 }
 
 @media screen and (min-width: 768px) {
