--- a/src/Form.css
+++ b/src/Form.css
@@ -73,8 +73,8 @@
     padding: 10px;
     border-radius: 5px;
     border: none;
-    background-color: black;
-    color: white;
+    background-color: lightgray;
+    color: black;
 }
 
 @media screen and (min-width: 768px) {
