--- a/src/Form.css
+++ b/src/Form.css
@@ -88,10 +88,6 @@
         flex-wrap: nowrap;
     }
 
-    .form__reason {
-        width: 410px;
-    }
-
     .form__comment {
         min-width: 400px;
         max-width: 400px;
@@ -101,16 +97,31 @@
         width: 188px;
         margin: 5px;
     }
+    
+    .form__reason, .form__file {
+        width: 412px;
+    }
+    
+    ::-webkit-file-upload-button {
+        padding: 15px 20px;
+    }
+    
+    .form__btn {
+        display: flex;
+        max-width: 432px;
+        margin: 15px auto;
+    }
+    
+    .form__submit, .form__reset {
+        width: 200px;
+        margin: 5px 10px;
+    }
 }
 
 @media screen and (min-width: 1024px) {
     .form__mail, .form__comment  {
         width: 600px;
         margin: 5px 0;
-    }
-    
-    .form__reason {
-        width: 612px;
     }
 
     .form__comment {
@@ -121,5 +132,22 @@
     .form__firstname, .form__lastname {
         width: 290px;
         margin: 5px;
+    }
+    
+    .form__reason, .form__file {
+        width: 612px;
+    }
+    
+    ::-webkit-file-upload-button {
+        padding: 15px 50px;
+    }
+    
+    .form__btn {
+        max-width: 432px;
+    }
+    
+    .form__submit, .form__reset {
+        width: 200px;
+        margin: 5px 10px;
     }
 }
