--- a/src/Form.css
+++ b/src/Form.css
@@ -11,7 +11,7 @@
     margin: 5px 0;
 }
 
-.form__label, .form__dateLabel {
+.form__label, .form__dateLabel, .form__info {
     margin: 5px 0;
     font-size: 0.8rem;
     color: rgba(255, 255, 255, 0.5);
