--- a/src/Header.css
+++ b/src/Header.css
@@ -1,49 +1,77 @@
-.header__banner {
-    height: 100px;
-    display: flex;
-    margin: 30px 0 50px 0;
-    background-color: #c81517;
-    justify-content: space-between;
-    align-items: center;
-}
-
 .header__logo {
-    height: 150%;
-    margin-left: 50px;
+    display: block;
+    width: 120px;
+    margin-left: 5%;
 }
 
-.header__link {
+.header {
+    display: flex;
+    width: 100%;
+    align-items: flex-start;
+}
+
+.navbar {
+    display:flex;
+    width: 100%;
+    height: 100%;
+    align-items: flex-end;
+    flex-direction: column;
+}
+
+.navbar__element {
+    display: none;
+}
+
+.navbar__toggle {
     text-decoration: none;
-    color: white;
-    font-family: Montserrat, Arial, Helvetica, sans-serif;
-    font-weight: 500;
-    margin: 15px;
-    align-self: center;
+    padding: 15px 30px;
+    font-size: 2.5rem
 }
 
-@media screen and (min-width: 768px) {
-    .header__banner {
-        height: 120px;
-    }
+.responsive > .navbar__element {
+    display: block;
+    color: black;
+    text-align: right;
+    background-color: white;
+    margin: 0 20px;
+    font-size: 1.2rem;
+    text-decoration: none;
+    padding: 0 10px 25px 10px;
 
-    .header__logo {
-        height: 200%;
-        margin-left: 75px;
-    }
-
-    .header__navbar {
-        margin-right: 50px;
-    }
+    transition-duration: 80ms;
 }
 
-@media screen and (min-width: 992px) {
-    .header__banner {
-        height: 150px;
-        margin: 30px 0 75px 0;
+.responsive > .navbar__element:hover {
+    font-weight: bold;
+    border-bottom: 5px solid #c81517 ;
+}
+
+@media screen and (min-width: 540px) {
+    .header__logo {
+        margin-left: 3%;
+        width: 150px;
     }
 
-    .header__logo {
-        height: 220%;
-        margin-left: 100px;
+    .header {
+        align-items: center;
+    }
+
+    .navbar {
+        flex-direction: row;
+        justify-content: flex-end;
+        height: 80px;
+    }
+
+    .navbar__toggle {
+        display: none;
+        text-decoration: none;
+    }
+
+    .navbar__element {
+        display: block;
+        color: black;
+        margin: 0 25px;
+        font-size: 1.2rem;
+        text-decoration: none;
     }
 }
