Changement de logo + ajustements

--- a/src/Header.css
+++ b/src/Header.css
@@ -1,13 +1,13 @@
-.header__logo {
-    display: block;
-    width: 120px;
-    margin-left: 5%;
-}
-
 .header {
     display: flex;
     width: 100%;
     align-items: flex-start;
+}
+
+.header__logo {
+    display: block;
+    width: 80px;
+    margin:30px;
 }
 
 .navbar {
@@ -16,6 +16,7 @@
     height: 100%;
     align-items: flex-end;
     flex-direction: column;
+    padding-right: 15px;
 }
 
 .navbar__element {
@@ -48,8 +49,8 @@
 
 @media screen and (min-width: 540px) {
     .header__logo {
-        margin-left: 3%;
-        width: 150px;
+        margin: 50px;
+        width: 100px;
     }
 
     .header {
